--- a/trunk/personal/prettyprint.css
+++ b/trunk/personal/prettyprint.css
@@ -10,8 +10,8 @@
 .prettyprint { background-color:none }
 li.L0,li.L1,li.L2,li.L3,li.L4,li.L5,li.L6,li.L7,li.L8,li.L9 { color:#555; list-style-type:decimal }
 li.L1,li.L3,li.L5,li.L7,li.L9 { background-color:transparent }
-.str,.atv { color:#EC7600 }
-.pun,.pln { color:#F1F2F3 }
+.str,.atv { color:#888 }
+.pun,.pln { color:#708090 }
 .prettyprinted { word-wrap:break-word }
 @media print {
 .com { color:#600; font-style:italic }
